--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "homepage": "https://smit-kalavadiya.github.io/e-plantShopping/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
